2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-25  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp, src/videograbber.cpp: Do not update
	the video sliders if the driver returns values of zero for all
	settings, instead reuse the former values. Thanks to
	schorpp   _@_   schorpp.dyndns.dk.

	* src/vfakeio.cpp, src/vfakeio.h: Added GetParameters function that
	returns 0 for all settings.

2005-03-23  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added 'xh' to ALL_LINGUAS.

2005-03-21  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed inversion of whiteness and brightness
	settings when using the sliders thanks to 
	schorpp _AT_ schorpp.dyndns.dk.

2005-03-02  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version to 1.2.1.

2005-03-02  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Upgraded requirements to Mimas.
	
2005-02-21  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Fixed multiarch building thanks to Fred. Crozat.

2005-02-14  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Fixed problem with polycom units.

2005-02-14  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Fixed typo. Thanks Kilian.

2005-02-14  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne "Nepali" in ALL_LINGUAS

2005-02-07  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Fixed search without search
	parameter.

2005-02-06  Damien Sandras  <dsandras@gnome.org>

	* help/C/gnomemeeting.xml, help/fr/gnomemeeting.xml: Fixed XML thanks
	to Stefan Bruens <lurch.nospam_@gmx.li>

2005-02-03  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoint.cpp: Reverted change.

2005-02-03  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoint.cpp: Improved fix for notation when the 
	remote host is ipv6.

2005-02-03  Damien Sandras  <dsandras@gnome.org>
