@@ -1,3 +1,10 @@
+2005-04-05  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/stats_drawing_area.*, endpoint.cpp: 
+	Applied patch from Stefan Bruens for more
+	optimisation of the stats display and to fix a peak appearing when
+	the stats drawing area is hidden then shown by the user.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * configure.in: Added "rw" to ALL_LINGUAS.
